linked up UI to API call, and display API call info to UI

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
       <button type="submit" class="btn btn-success" id="exchangeCurrency">Submit</button>
     </form>
   </div>
+  <p id="results"></p>
 </body>
 </html>
