WIP support for different country codes

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,14 @@
       <div class="mb-3">
         <label for="amount">Enter an amount:</label>
         <input id="amount" type="text" name="amount" class="form-control" placeholder="5">
+        <br>
+        <label for="code1">Enter starting country code currency:</label>
+        <input id="code1" type="text" name="code1" class="form-control" placeholder="usd">
+        <br>
+        <label for="code2">Enter destination country code currency:</label>
+        <input id="code2" type="text" name="code2" class="form-control" placeholder="aud">
 
-        <div class="form-text">Search will default to 5$</div>
+        <div class="form-text">will default to placeholder text if nothing is inputted.</div>
       </div>
       <button type="submit" class="btn btn-success" id="exchangeCurrency">Submit</button>
     </form>
