finished up printing second country code to DOM and conversion logic

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <form>
       <div class="mb-3">
         <label for="amount">Enter an amount:</label>
-        <input id="amount" type="text" name="amount" class="form-control" placeholder="5">
+        <input id="amount" type="number" name="amount" class="form-control" placeholder="5">
         <br>
         <label for="code1">Enter starting country code currency:</label>
         <input id="code1" type="text" name="code1" class="form-control" placeholder="usd">
