updated html with link to wiki page and other page formatting

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <body>
   <div class="container">
     <h1>Exchange currency rates!</h1>
-    <p>https://en.wikipedia.org/wiki/ISO_4217</p>
+    <p>Check out this <a href="https://en.wikipedia.org/wiki/ISO_4217#List_of_ISO_4217_currency_codes">Wikipedia</a> page for all 3 letter Country codes.(Do note that KPW does not work with the current database)</p>
     <form>
       <div class="mb-3">
         <label for="amount">Enter an amount:</label>
@@ -22,6 +22,8 @@
       <button type="submit" class="btn btn-success" id="exchangeCurrency">Submit</button>
     </form>
   </div>
-  <p id="results"></p>
+  <div class="container">
+    <p id="results"></p>
+  </div>
 </body>
 </html>
