fixed spelling errors

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,16 @@
 <body>
   <div class="container">
     <h1>Exchange currency rates!</h1>
-    <p>Check out this <a href="https://en.wikipedia.org/wiki/ISO_4217#List_of_ISO_4217_currency_codes">Wikipedia</a> page for all 3 letter Country codes.(Do note that KPW does not work with the current database)</p>
+    <p>Check out this <a href="https://en.wikipedia.org/wiki/ISO_4217#List_of_ISO_4217_currency_codes">Wikipedia</a> page for all 3 letter Country Codes. (Do note that KPW does not work with the current database)</p>
     <form>
       <div class="mb-3">
         <label for="amount">Enter an amount:</label>
         <input id="amount" type="number" name="amount" class="form-control" placeholder="5">
         <br>
-        <label for="code1">Enter starting country code currency:</label>
+        <label for="code1">Enter starting Country Code currency:</label>
         <input id="code1" type="text" name="code1" class="form-control" placeholder="usd">
         <br>
-        <label for="code2">Enter destination country code currency:</label>
+        <label for="code2">Enter destination Country Code currency:</label>
         <input id="code2" type="text" name="code2" class="form-control" placeholder="aud">
 
         <div class="form-text">will default to placeholder text if nothing is inputted.</div>
